--- a/index.html
+++ b/index.html
@@ -5,6 +5,58 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/Ahmed1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahmed | Portfolio</title>
+
+    <!-- Meta Tags -->
+    <meta
+      name="description"
+      content="Ahmed Esmail's portfolio showcasing skills, projects, and experience."
+    />
+    <meta
+      name="keywords"
+      content="Ahmed Esmail, Full-Stack Developer, React, ASP .NET, Laravel, Vue JS, MySQL, TailwindCSS"
+    />
+    <meta name="author" content="Ahmed Esmail" />
+
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Ahmed Esmail - Portfolio" />
+    <meta
+      property="og:description"
+      content="Ahmed Esmail's portfolio showcasing skills, projects, and experience."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ahmedesmail.me" />
+    <meta property="og:image" content="./src/assets/Ahmed1.png" />
+    <meta property="og:site_name" content="Ahmed Esmail - Portfolio" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ahmed Esmail - Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Ahmed Esmail's portfolio showcasing skills, projects, and experience."
+    />
+    <meta name="twitter:image" content="./src/assets/Ahmed1.png" />
+
+    <!-- Additional Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Robots Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="robots"
+      content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+
+    <!-- LinkedIn -->
+    <meta
+      name="linkedin:owner"
+      content="https://www.linkedin.com/in/ahmedesmailofficial"
+    />
+
+    <!-- Browser Compatibility -->
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
   </head>
   <body>
     <div id="root"></div>
